--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,12 @@
     align-items: center;
     flex-direction: column;
 }
+.made-by {
+    font-size: 14px;
+    color: #000000;
+    margin-top: 20px; /* Add margin for spacing */
+  }
+.temp{
+    margin-bottom: 20px;
+}
+  
